[metadata]
name = cutev
version = 0.0.2
description = command line terminal text viewer using curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/cutev
author = Chad Larson
author_email = techchad2@gmail.com

[options]
packages = find:
install_requires:

python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    test

[options.entry_points]
console_scripts =
    cutev = cutev.cutev:main
